- Module changes: added two hooks: HOOKTYPE_USERMSG and HOOKTYPE_CHANMSG, changed umode_get.
- Fixed bug with chmode +u: Quits/nick changes of other users were shown.
- Added /who *.host.com support (ircop only), this was already possible via /who -h <host>
  but most ppl expect it to work this way too.
- Updated win32 compile instructions
- Fixed set::dns error messages
- Fixed win32 compile error
- Fixed chmode +u again.
- Fixed a bug reported by mQ where it was possible to include spaces in a TKL host
- Documentation updates (added a section about features).
- Fixed remote /rehash bug (#0000600).
- Documentation updates (unreal32docs.html, example.conf).
- Added a new badword type, quit. This replaces the old CENSOR_QUIT. If you want to censor
  quit messages you create a badword quit {}. Additionally loading badwords.quit.conf will
  censor several badwords by default. Based on suggestions by Gargo
- Fixed two ident bugs (multihomed&connect), both resulted in ident not working.
- Added set::options::dont-resolve (=hostnames of incomming clients won't be resolved).
- Code cleanup (gcc 3.2 warnings with -Wall).
- Removed/updated some NS stuff
- Added EventMarkDel which marks an event for deletion for the (next) DoEvents() call.
- Fixed /rehash stall caused by delayed unloading of the scan module (deadlock).
- Added feature that if the chan is +m AND +u (so both!) and you ban IRC!*@* then ops
  will no longer see the "relayed" message from IRC.
- Made set::allow-userhost-change force-rejoin work.
- Fixed chmode +u bug when chanop was parting but wasn't sent to normal users.
- Added allow-userhost-change checks to /vhost.
- Added SVSWATCH: allows U-lined server to modify the watch list of a user.
- Added SVSSILENCE: allows U-lined server to modify the silence list of a user.
- Documentation/text updates.
- WebTV fixes
- Added except throttle {}, only working when #define THROTTLE
- Doc/text updates
- Changed version to beta15